[gd_scene load_steps=7 format=2]

[ext_resource path="res://nodes/soliders/soldier.gd" type="Script" id=1]
[ext_resource path="res://nodes/circle.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 90.0

[sub_resource type="CircleShape2D" id=2]
radius = 36.0

[sub_resource type="CircleShape2D" id=4]
radius = 12.0

[sub_resource type="Animation" id=3]
resource_name = "Show"
length = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Circle:radius")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 36 ]
}

[node name="Soldier" type="StaticBody2D" groups=["soldiers"]]
collision_layer = 8
collision_mask = 7
script = ExtResource( 1 )

[node name="Circle" parent="." instance=ExtResource( 2 )]
color = Color( 0.917647, 0.0313726, 0.0313726, 0.25098 )
radius = 0

[node name="Sprite" type="Sprite" parent="."]

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )

[node name="Proximity" type="Area2D" parent="."]
input_pickable = false

[node name="Collider" type="CollisionShape2D" parent="Proximity"]
shape = SubResource( 1 )

[node name="Aquisition" type="Area2D" parent="."]
input_pickable = false

[node name="Collider" type="CollisionShape2D" parent="Aquisition"]
shape = SubResource( 2 )

[node name="Capture" type="Area2D" parent="."]
input_pickable = false

[node name="Collider" type="CollisionShape2D" parent="Capture"]
shape = SubResource( 4 )

[node name="CircleAnimator" type="AnimationPlayer" parent="."]
anims/Show = SubResource( 3 )

[node name="PatrolTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="body_entered" from="Proximity" to="." method="_on_Proximity_body_entered"]
[connection signal="body_exited" from="Proximity" to="." method="_on_Proximity_body_exited"]
[connection signal="body_entered" from="Aquisition" to="." method="_on_Aquisition_body_entered"]
[connection signal="body_entered" from="Capture" to="." method="_on_Capture_body_entered"]
[connection signal="timeout" from="PatrolTimer" to="." method="_on_PatrolTimer_timeout"]
